# mos6502-emulator

./: .gitignore  CMakeLists.txt  README.md  cpu.c  cpu.h  debug.c  debug.h  display.c  display.h  init.c  init.h  main.c  mult  mult.s  pipeline.c  pipeline.h  pong.s  pongtest  pongtest.s  proyecto-grupo1.sh  pruebita  pruebita.s  snake  snake.s  snake1.s  test  test.s
instr/: adc.c  adc.h  and.c  and.h  asl.c  asl.h  bit.c  bit.h  cmp.c  cmp.h  cpx.c  cpx.h  cpy.c  cpy.h  dec.c  dec.h  eor.c  eor.h  impl.c  impl.h  inc.c  inc.h  jmp.c  jmp.h  lda.c  lda.h  ldx.c  ldx.h  ldy.c  ldy.h  lsr.c  lsr.h  ora.c  ora.h  rel.c  rel.h  rol.c  rol.h  ror.c  ror.h  (+8 more)
